# ambient

./: README.md
AmbientShield/: AmbientOrb  AmbientShield  OrbEnhancements.swift  OrbTestRunner  OrbTestRunner.swift  OrbTestView.swift  ProximityManager.swift  ShieldView.swift  main.swift
android_app/: .gitignore  build.gradle.kts  local.properties  settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/ambient/os/: AmbientApplication.kt  AmbientDiscoveryController.kt  ClipboardSyncService.kt  ConnectionState.kt  DeviceDiscoveryManager.kt  Extensions.kt  MainActivity.kt  PhotoWatcherService.kt  ProximityBeacon.kt  QuickShareTileService.kt  SilentShareActivity.kt
android_app/app/src/main/java/com/ambient/os/ui/: AmbientApp.kt  AmbientTheme.kt  DeviceCard.kt  ToggleTile.kt
android_app/app/src/main/res/drawable/: ic_ambient_logo.xml  image_preview_background.xml  toast_error_background.xml  toast_success_background.xml
android_app/app/src/main/res/layout/: activity_main.xml  custom_toast.xml
android_app/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
android_app/app/src/main/res/xml/: data_extraction_rules.xml
mac_toast/: PhotoToast  main.swift
rust_agent/: .gitignore  Cargo.toml  com.ambient.os.agent.plist
rust_agent/src/: main.rs
