[package]
name = "rust_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.0"
axum = { version = "0.8.4", features = ["multipart"] }
hostname = "0.4"
mdns-sd = "0.11"
open = "5.3.2"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
